--- a/socialMedia.html
+++ b/socialMedia.html
@@ -192,108 +192,395 @@
       </div>
     </section>
 
-    <section class="container mT-9">
+    <section class="abrigo container mT-9">
       <div class="c-main-blue text-center fs-md">
         <h2>¿Cómo conseguimos que tus seguidores se quiten el abrigo?</h2>
       </div>
 
-      <div class="d-flex flex-wrap mT-5">
+      <div class="abrigo__content d-flex flex-wrap mT-5">
         <div>
           <header class="d-flex align-items-center gap-3">
-            <img src="images/socialMedia/checked.png" alt="" class="amedida__img">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
 
-            <h2 class="c-main-blue fs-md">Elaboramos un plan estratégico a medida</h2>
+            <h2 class="c-main-blue fs-md fw-300">
+              Elaboramos un plan estratégico a medida
+            </h2>
           </header>
 
-          <main class="fs-2 mT-2">
+          <main class="line-height-md fs-2 mT-2">
             <p>
-              Analizamos la identidad digital de tu marca y marcamos los objetivos que queremos conseguir con tus redes sociales para crear un plan estratégico que los cumpla.
+              Analizamos la identidad digital de tu marca y marcamos los
+              objetivos que queremos conseguir con tus redes sociales para crear
+              un plan estratégico que los cumpla.
             </p>
           </main>
         </div>
 
         <div>
           <header class="d-flex align-items-center gap-3">
-            <img src="images/socialMedia/checked.png" alt="" class="amedida__img">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
 
-            <h2 class="c-main-blue fs-md">Elaboramos un plan estratégico a medida</h2>
+            <h2 class="c-main-blue fs-md fw-300">Creamos contenido original</h2>
           </header>
 
-          <main class="fs-2 mT-2">
+          <main class="line-height-md fs-2 mT-2">
             <p>
-              Analizamos la identidad digital de tu marca y marcamos los objetivos que queremos conseguir con tus redes sociales para crear un plan estratégico que los cumpla.
+              Nuestro equipo genera contenido original para tus redes pensando
+              en que aporte valor a tu comunidad, lo que aumenta la retención,
+              el engagement y la tasa de share.
             </p>
           </main>
         </div>
 
         <div>
           <header class="d-flex align-items-center gap-3">
-            <img src="images/socialMedia/checked.png" alt="" class="amedida__img">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
 
-            <h2 class="c-main-blue fs-md">Elaboramos un plan estratégico a medida</h2>
+            <h2 class="c-main-blue fs-md fw-300">Publicamos regularmente</h2>
           </header>
 
-          <main class="fs-2 mT-2">
+          <main class="line-height-md fs-2 mT-2">
             <p>
-              Analizamos la identidad digital de tu marca y marcamos los objetivos que queremos conseguir con tus redes sociales para crear un plan estratégico que los cumpla.
+              Analizamos las mejores franjas horarias para publicar y creamos un
+              calendario de publicaciones, orientado a maximizar la exposición
+              de los posts.
             </p>
           </main>
         </div>
 
         <div>
           <header class="d-flex align-items-center gap-3">
-            <img src="images/socialMedia/checked.png" alt="" class="amedida__img">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
 
-            <h2 class="c-main-blue fs-md">Elaboramos un plan estratégico a medida</h2>
+            <h2 class="c-main-blue fs-md fw-300">Gestionamos tu comunidad</h2>
           </header>
 
-          <main class="fs-2 mT-2">
+          <main class="line-height-md fs-2 mT-2">
             <p>
-              Analizamos la identidad digital de tu marca y marcamos los objetivos que queremos conseguir con tus redes sociales para crear un plan estratégico que los cumpla.
+              Interactuamos con tu comunidad para crear un vínculo que se
+              traduzca en confianza y, posteriormente, en ventas.
             </p>
           </main>
         </div>
 
         <div>
           <header class="d-flex align-items-center gap-3">
-            <img src="images/socialMedia/checked.png" alt="" class="amedida__img">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
 
-            <h2 class="c-main-blue fs-md">Elaboramos un plan estratégico a medida</h2>
+            <h2 class="c-main-blue fs-md fw-300">
+              Impulsamos tus campañas de marketing y conseguimos colaboraciones
+            </h2>
           </header>
 
-          <main class="fs-2 mT-2">
+          <main class="line-height-md fs-2 mT-2">
             <p>
-              Analizamos la identidad digital de tu marca y marcamos los objetivos que queremos conseguir con tus redes sociales para crear un plan estratégico que los cumpla.
+              Maximizamos el beneficio de tu inversión en campañas de anuncios y
+              gestionamos integralmente campañas con influencers. Además
+              elaboramos sorteos que ayuden a darte viralidad.
+            </p>
+          </main>
+        </div>
+
+        <div>
+          <header class="d-flex align-items-center gap-3">
+            <img
+              src="images/socialMedia/checked.png"
+              alt=""
+              class="amedida__img"
+            />
+
+            <h2 class="c-main-blue fs-md fw-300">
+              Analizamos nuestros resultados constantemente
+            </h2>
+          </header>
+
+          <main class="line-height-md fs-2 mT-2">
+            <p>
+              Medimos el resultado de todo ese trabajo que te hemos comentado
+              con el objetivo de potenciar aquello que funciona y perfeccionar
+              aquello en lo que todavía queda margen de mejora.
             </p>
           </main>
         </div>
       </div>
+
+      <div class="text-center mT-9">
+        <a
+          href="#"
+          class="btn flexContainer__box--radius-big bg-blue-main c-white fs-md fs-3 pX-2 pY-2 mT-5"
+        >
+          Quiero más info
+          <span class="d-block fs-2"> Te asesoramos de forma gratuita </span>
+        </a>
+      </div>
     </section>
 
-    <section class="container text-center mT-9">
-      <h2 class="c-main fs-3">
-        El funnel va estar trabajando automáticamente por ti.
-      </h2>
+    <section class="bg-multicolor pY-10 pX-3 mT-9">
+      <div class="container bg-white flexContainer__box--radius-big pX-2 pY-10">
+        <div class="text-center">
+          <h2 class="c-main text-transform-uppercase fw-300 fs-3">
+            Nuestro servicio Social Media
+          </h2>
 
-      <p class="line-height-md fs-3 mT-3">
-        Convertirá visitas en clientes incluso cuando tú estés durmiendo y
-        creará una lista de contactos de clientes interesados en tus productos
-        para que puedas enviarles ofertas irresistibles.
-      </p>
+          <h3 class="line-height-md fw-300 fs-2 mT-2">
+            Lo que te ofrecemos es un servicio de Social Media integral. Desde
+            el momento en el que decides confiarnos tu
+            <span class="d-block">
+              proyecto, nos comprometemos al cien por cien con él y por eso nos
+              encargamos de todo:
+            </span>
+          </h3>
+        </div>
 
-      <p class="fs-3 mT-3">
-        El resultado de todo será un aumento de tus ventas.
-      </p>
+        <div class="abrigo__content d-flex flex-wrap mT-5">
+          <div class="d-flex gap-2 fs-2 line-height-md">
+            <img
+              src="images/socialMedia/original.png"
+              alt=""
+              loading="lazy"
+              class="amedida__img"
+            />
 
-      <a
-        href="#"
-        class="btn flexContainer__box--radius-big bg-blue-green c-white fs-md pX-2 pY-2 mT-5"
-      >
-        Empieza tu funnel hoy mismo
-      </a>
+            <p>
+              Creamos contenido original y que aporte valor para que tu público
+              objetivo no pueda pasarte por alto.
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 fs-2 line-height-md">
+            <img
+              src="images/socialMedia/reference.png"
+              alt=""
+              loading="lazy"
+              class="amedida__img"
+            />
+
+            <p>
+              Con todo este contenido de calidad conseguimos que te vayas
+              convirtiendo en un punto de referencia al que acudirán tus
+              seguidores cuando necesiten comprar aquello que vendes.
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 fs-2 line-height-md">
+            <img
+              src="images/socialMedia/interaction.png"
+              alt=""
+              loading="lazy"
+              class="amedida__img"
+            />
+
+            <p>
+              Interactuamos con tu comunidad para reforzar los lazos que unen a
+              tus clientes con la marca. Por eso, responderemos a sus
+              comentarios y mensajes directos y les daremos un servicio de
+              atención al cliente.
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 fs-2 line-height-md">
+            <img
+              src="images/socialMedia/marketing.png"
+              alt=""
+              loading="lazy"
+              class="amedida__img"
+            />
+
+            <p>
+              Creamos, gestionamos y analizamos las campañas de anuncios que
+              decidas lanzar en redes sociales para maximizar su alcance y
+              resultados.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <footer class="footer bg-black pY-5 mT-9">
+    <section class="bg-black-2 bg pY-10">
+      <div class="container">
+        <div class="text-center">
+          <h2>
+            Puedes acceder a este servicio integlar de social media a través de
+            dos paquetes:
+          </h2>
+        </div>
+
+        <div class="compras d-flex gap-10">
+          <div class="flexContainer__box--radius bg-white pY-5 pX-2">
+            <div class="text-center c-main">
+              <h2 class="text-transform-uppercase fs-3">paquete despegue</h2>
+              <h3 class="fs-md fw-300">para empezar tu viaje</h3>
+
+              <p
+                class="d-inline-block bg-green c-white flexContainer__box--radius-big fs-2 pY-1 pX-2 mT-1"
+              >
+                seleccion
+              </p>
+            </div>
+
+            <ul class="mT-9">
+              <li class="d-flex gap-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">Gestión de 2 redes sociales.</p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">
+                  2 post por semana con servicio de diseño gráfico y copywriting
+                  de los post
+                </p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">
+                  Contratando plan trimestral no hay cuota de alta.
+                </p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">Adicional por red social: 120€/mes.</p>
+              </li>
+
+              <li class="text-center mT-5">
+                <h2 class="fs-3">
+                  450€/mes + <span class="fw-300">150 de alta</span>
+                </h2>
+              </li>
+            </ul>
+
+            <a
+              href="#"
+              class="btn bg-green flexContainer__box--radius-big c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
+            >
+              <span class="d-block">Comprar</span> Ahorar
+            </a>
+          </div>
+
+          <div class="flexContainer__box--radius bg-green-dark pY-5 pX-2">
+            <div class="text-center">
+              <h2 class="c-white text-transform-uppercase fs-3">
+                paquete nautilus
+              </h2>
+              <h3 class="c-white fs-md fw-300">Para alcanzar velocidad de crucero</h3>
+
+              <p
+                class="d-inline-block bg-white flexContainer__box--radius-big fs-2 pY-1 pX-2 mT-1"
+              >
+                seleccion
+              </p>
+            </div>
+
+            <ul class="mT-9 c-white">
+              <li class="d-flex gap-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">
+                  <span class="fw-bold">Gestión</span> de 2 redes sociales.
+                </p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">
+                  <span class="fw-bold">3 post por semana</span> con servicio de
+                  diseño gráfico y copywriting de los post
+                </p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">
+                  Contratando plan trimestral no
+                  <span class="fw-bold">hay cuota de alta.</span>
+                </p>
+              </li>
+
+              <li class="d-flex gap-2 mT-2">
+                <img
+                  src="images/socialMedia/comporbando2.png"
+                  alt=""
+                  class="amedida__img"
+                />
+
+                <p class="fs-small">Adicional por red social: 150€/mes.</p>
+              </li>
+
+              <li class="text-center c-white mT-5">
+                <h2 class="fs-3">
+                  450€/mes + <span class="fw-300">150 de alta</span>
+                </h2>
+              </li>
+            </ul>
+
+            <a
+              href="#"
+              class="btn bg-black flexContainer__box--radius-big c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
+            >
+              <span class="d-block">Comprar</span> Ahorar
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer bg-black pY-5">
       <div class="container">
         <div
           class="d-flex flex-direction-column gap-5 align-items-center row-landscape"
