--- a/socialMedia.html
+++ b/socialMedia.html
@@ -425,7 +425,7 @@
           </h2>
         </div>
 
-        <div class="compras d-flex gap-10">
+        <div class="compras d-flex flex-direction-column row-landscape gap-10">
           <div class="flexContainer__box--radius bg-white pY-5 pX-2">
             <div class="text-center c-main">
               <h2 class="text-transform-uppercase fs-3">paquete despegue</h2>
